<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DelicacyFusion</string>
    <string name="welcome">欢迎使用DelicacyFusion</string>
    <string name="settings">设置</string>
    <string name="table_layout">餐桌布局</string>
    <string name="login">登录</string>
    <string name="finish">完成</string>
    <string name="table">餐桌</string>
    <string name="my_order">我的订单</string>
    <string name="order_title">订单</string>
    <string name="id">编号</string>
    <string name="table_id">台号</string>
    <string name="head_count">人数</string>
    <string name="all">全部</string>
    <string name="order">我要点</string>
    <string name="create_order">开单</string>
    <string name="send_order">落单</string>
    <string name="create_before_ordering">点菜前必须先开单</string>
    <string name="ok">确定</string>
    <string name="store">门店</string>
    <string name="floor">楼</string>
    <string name="cancel">取消</string>
    <string name="server_addr">服务器地址</string>
    <string name="sync_shop">同步门店数据</string>
    <string name="clean_cache">清除缓存</string>
    <string name="logout">退出登录</string>
    <string name="click_to_close">点击关闭</string>
    <string name="init_shop">正在初始化门店，请稍候</string>
    <string name="network_unavailable">当前没有网络连接，部分功能将不可用</string>
    <string name="user_cancel_create_order">用户取消创建订单</string>
    <string name="All">全部</string>
    <string name="CoolDish">凉菜</string>
    <string name="HotDish">热菜</string>
    <string name="Soup">羹汤</string>
    <string name="Desert">点心</string>
    <string name="WineDrinking">酒水饮料</string>
    <string name="SeaFood">海鲜</string>
    <string name="title_activity_setup_wizard">SetupWizard</string>
    <string name="action_settings">Settings</string>
    <string name="tenant_code">公司代码</string>
    <string name="remove">删除</string>
    <string name="demo">演示</string>
    
    <string name="unknown_category">未知类别</string>
    <string name="login_fail">登录失败</string>
    <string name="no_store_found">未找到门店</string>
    <string name="no_tenant_specified">未指定公司</string>
    <string name="no_store_specified">未指定门店</string>
    
</resources>