<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/leftContentPane"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD"
    android:visibility="gone" >

    <TextView
        android:id="@+id/orderTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/order_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/orderIdCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/orderTitle"
        android:paddingRight="5dp"
        android:text="@string/id" />

    <TextView
        android:id="@+id/orderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderTitle"
        android:layout_toRightOf="@id/orderIdCaption" />

    <TextView
        android:id="@+id/headCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/orderTitle" />

    <TextView
        android:id="@+id/headCountCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderTitle"
        android:layout_toLeftOf="@id/headCount"
        android:gravity="right"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/head_count" />

    <TextView
        android:id="@+id/tableId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderTitle"
        android:layout_toLeftOf="@id/headCountCaption" />

    <TextView
        android:id="@+id/tableIdCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderTitle"
        android:layout_toLeftOf="@id/tableId"
        android:layout_toRightOf="@id/orderId"
        android:gravity="right"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/table_id" />

    <ImageButton
        android:id="@+id/btnSendOrder"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/send_order"
        android:padding="20dp"
        android:src="@drawable/send" />

    <TextView
        android:id="@+id/orderTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/btnSendOrder"
        android:paddingRight="10dp"
        android:textColor="#FF0000"
        android:textSize="48sp" />

    <ListView
        android:id="@+id/lstOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnSendOrder"
        android:layout_below="@id/orderId"
        android:animateLayoutChanges="true"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" />

</RelativeLayout>